# mulle-c11

./: .appveyor.yml  .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  install.sh  package.json
.bootstrap/: embedded_repositories
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle-env/etc/: environment-global.sh  optionaltool  tools
.mulle-env/share/: environment-aux.sh  environment-extension.sh
.mulle-sde/etc/: extensions
.mulle-sde/share/: extension
.mulle-sde/share/cmake/: Environment.cmake
.mulle-sde/share/ignore.d/: 00-directories--none
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-terodde.sh  environment-host-walitza.sh  environment-project.sh  tool  tool.linux  tool.windows
.mulle/etc/make/: build-dir
.mulle/share/env/: auxscope  environment-extension.sh  environment-plugin.sh  environment-project.sh  style
.mulle/share/sde/: extension
.travis.d/: before_install  script
cmake/: DependenciesAndLibraries.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cola/: acknowledgments.md.bud  api.md.bud  description.md.bud  features.md.bud  info.md.bud  properties.plist
dox/: STEAL.md  SYNTAX.md
mulle-project/: formula-info.sh
src/: mulle-c11-bool.h  mulle-c11-endian.h  mulle-c11-eval.h  mulle-c11-integer.h  mulle-c11.h  mulle_c11.h
templates/: README.md.scion
test/: README.md
test/.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-terodde.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: environment-extension.sh
test/.mulle/share/sourcetree/: config
test/10-constructor/: constructor.c
test/10_constructor/: constructor.stdout
test/20-destructor/: destructor.c
test/20_destructor/: README  destructor.c  destructor.stdout
test/30_inline/: inline.c
test/40-vaargs/: cat.c  concat.c  count.c  count.stdout  eval.c  genstruct.c  genstruct.stdout  get.c  hasargs.c  identifier.c  identifier.stdout  stringify.c  when.c
test/50-assert/: fail.c  pass.c
test/60-eval/: square.c  square.stdout
test/70-pointer/: postincrement.c  predecrement.c
test/80-package/: CMakeLists.txt  main.c  run
